buildscript {
    repositories {
        gradlePluginPortal()
        mavenCentral()
    }
    dependencies {
        classpath 'com.epages:restdocs-api-spec-gradle-plugin:0.18.2'
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

apply plugin: 'com.epages.restdocs-api-spec'

group = 'cpa-yusin-quiz'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {url 'https://jitpack.io'}
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    compileOnly 'org.projectlombok:lombok:1.18.34'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // DB
    //runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'

    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // security
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    testRuntimeOnly 'com.h2database:h2'


    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //jwt
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.6'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.6'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.6'

    //id 'org.asciidoctor.jvm.convert' version '4.0.2'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.18.2'

    //s3
    implementation platform('software.amazon.awssdk:bom:2.40.6')
    implementation 'software.amazon.awssdk:s3'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'io.prometheus:prometheus-metrics-exposition-formats:1.2.1'

}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    dependsOn test
    sourceDir file("src/main/resources/static/asciidoc")
    outputDir file("$buildDir/docs/asciidoc")
    baseDirFollowsSourceFile()
    attributes 'snippets': snippetsDir
}

openapi3 {
    title = 'Yusin Quiz API'
    description = 'API contract generated from Spring REST Docs integration tests.'
    server = 'http://localhost:8080'
    version = project.version
    format = 'json'
    outputDirectory = file("$buildDir/api-spec")
    outputFileNamePrefix = 'openapi3'
    snippetsDirectory = snippetsDir
}

afterEvaluate {
    tasks.named('openapi3') {
        dependsOn test
    }
}
